--- a/src/styles/_drawer.scss
+++ b/src/styles/_drawer.scss
@@ -36,8 +36,10 @@
             flex-direction: row;
             padding-top: 40px;
             margin: 0 auto;
+            width: 100%;
             @media screen and (max-width: 768px) {
                 flex-direction: column;
+                width: 100%;
             }
             .drawer__text {
                 display: flex;
