--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none !important;
+    overflow-x: none;
 }
 
 body {
@@ -76,7 +77,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.92);
     justify-content: center;
     align-items: center;
     z-index: 1;
@@ -92,32 +93,6 @@ body {
         width: 38px;
         cursor: pointer;
         display: none;
-    }
-}
-
-.iframe__container {
-    @include iframeModal;
-    @media screen and (max-width: 768px) {
-        max-width: 390px;
-        width: 100%;
-        padding: 150px 50px;
-    }
-    @media screen and (min-width: 768px) and (max-width: 1080px) {
-        max-width: 1090px;
-        width: 100%;
-        padding: 200px 150px;
-    }
-    iframe {
-        @media screen and (max-width: 768px) {
-            width: 300px;
-        }
-    }
-    img {
-        @media screen and (max-width: 768px) {
-            left: 280px;
-            bottom: 30px;
-            width: 28px;
-        }
     }
 }
 
