--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,11 +13,11 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none !important;
-    overflow-x: none;
 }
 
 body {
     background-color: variaveis.$corDeFundo !important;
+    overflow-x: hidden;
 }
 
 @mixin title($fontSize: 40px) {
